# test_moveit_planning_interface

./: CMakeLists.txt  README.md  package.xml
scene/: a.scene  b.scene
script/: motion_sequence_request.py
src/: test_add_object.cpp  test_moveit_plan.cpp
